# baller

./: .gitignore  CMakeLists.txt  f.fontdef
src/: main.cpp  maths_util.cpp  maths_util.hpp  point.cpp  point.hpp  simrenderer.cpp  simrenderer.hpp  simrenderer_camera.cpp  simrenderer_input.cpp  simrenderer_setup.cpp  sr_anim.cpp  sr_camera.cpp  sr_input.cpp  sr_io.cpp  sr_setup.cpp  textrenderer.cpp  textrenderer.hpp
